--- a/data/index.html
+++ b/data/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <script type="text/javascript">
-		 var currentWs, currentWs2, wsData, ws2Data
+		 var currentWs, currentWs2, wsData = "", ws2Data = "";
          function initConnection()
          {
                siteAddr = "ws://" + window.location.hostname + ":" + window.location.port + "/ws";
